Note about game params

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -49,7 +49,14 @@
     "    'stage selection': 'omega only',\n",
     "    'items': None\n",
     "}\n",
-    "time_limit = 3 # minutes"
+    "time_limit = 3 # minutes\n",
+    "\n",
+    "# ACTUIALLY NO!!!\n",
+    "# IT IS \"3:00\"\n",
+    "# TIME MODE\n",
+    "# YES FINAL SMASHES\n",
+    "# OMEGA ONLY STAGES\n",
+    "# NO ITEMS"
    ]
   },
   {
