--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,7 +2880,7 @@
     }
    ],
    "source": [
-    "match = 0 # number\n",
+    "match = 1 # number\n",
     "state = 'BEFORE'\n",
     "while True:\n",
     "    # PLAYER SELECT SCREEN\n",
@@ -2923,7 +2923,9 @@
     "    # This SHOULD take it back to playerselect.\n",
     "    with SwitchController(port='/dev/ttyUSB0',boc=True) as c:\n",
     "        c.button('A')\n",
-    "    sleep(20)"
+    "    sleep(20)\n",
+    "    \n",
+    "    match = match + 1"
    ]
   },
   {
