--- a/anal.ipynb
+++ b/anal.ipynb
@@ -158,29 +158,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ES\\nCHROM'"
+       "'BOWSER'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#config = (\"-l eng --oem 1 --psm 7\")\n",
-    "config = r'--psm 6 --user-patterns \"/home/nate/Projects/clb4s/fightingwords.user-patterns\" \"bazaar\"'\n",
+    "config = r'--psm 9 --user-patterns \"/home/nate/Projects/clb4s/fightingwords.user-patterns\" \"bazaar\"'\n",
     "pytesseract.image_to_string(i, config=config)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0 = Orientation and script detection (OSD) only.\n",
+    "1 = Automatic page segmentation with OSD.\n",
+    "2 = Automatic page segmentation, but no OSD, or OCR. (not implemented)\n",
+    "3 = Fully automatic page segmentation, but no OSD. (Default)\n",
+    "4 = Assume a single column of text of variable sizes.\n",
+    "5 = Assume a single uniform block of vertically aligned text.\n",
+    "6 = Assume a single uniform block of text.\n",
+    "7 = Treat the image as a single text line.\n",
+    "8 = Treat the image as a single word.\n",
+    "9 = Treat the image as a single word in a circle.\n",
+    "10 = Treat the image as a single character.\n",
+    "11 = Sparse text. Find as much text as possible in no particular order.\n",
+    "12 = Sparse text with OSD.\n",
+    "13 = Raw line. Treat the image as a single text line,\n",
+    "     bypassing hacks that are Tesseract-specifi\n",
+    "     \n",
+    "4 seems best for now...\n",
+    "Struct elem (2,3)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +213,7 @@
     "    image = cv2.imread(str(ip))\n",
     "    roi = image[y:y+dy,x:x+dx]\n",
     "    rv, i = cv2.threshold(roi, 180, 255, cv2.THRESH_BINARY_INV)\n",
-    "    kernel = cv2.getStructuringElement(cv2.MORPH_CROSS,(2,2))\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_CROSS,(2,3))\n",
     "    erosion = cv2.dilate(i,kernel,iterations = 1)\n",
     "    #config = (r'--psm 4',  r'--oem 1', r'--user-patterns \"/home/nate/Projects/clb4s/fightingwords.user-patterns\"', r'--lang \"eng\"', r'--tessdata-dir \"/home/nate/Projects/clb4s/tessdata/\"', r'\"bazaar\"')\n",
     "    #config = r'blah blah bl;ah --psm 5 --oem 1 --tessdata-dir \"/usr/share/tesseract-ocr/4.00/tessdata\" -c user-patterns=\"/home/nate/Projects/clb4s/fightingworrrds.user-patterns\" \"bazaar\"'\n",
@@ -200,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,80 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('', []),\n",
-       " ('OLIMAR', ['OLIMAR']),\n",
-       " ('MEGA MAM', ['MEGA MAN']),\n",
-       " ('RIDLEY', ['RIDLEY']),\n",
-       " ('MARIO', ['MARIO']),\n",
-       " ('BOWSER', ['BOWSER']),\n",
-       " ('YOUNG LINK', ['YOUNG LINK']),\n",
-       " ('A ZELDA', ['ZELDA']),\n",
-       " ('E ICINEROAR', ['INCINEROAR']),\n",
-       " ('YOUNG LINK', ['YOUNG LINK']),\n",
-       " ('A POKEMON TRAINER', ['POKEMON TRAINER']),\n",
-       " ('A 7S  PALUTENA', ['PALUTENA']),\n",
-       " ('BAYONETTA', ['BAYONETTA']),\n",
-       " ('RYU', ['RYU']),\n",
-       " ('LINK', ['LINK']),\n",
-       " ('BH  PIRANHA PLANT', ['PIRANHA PLANT']),\n",
-       " ('AL CHROM', ['CHROM']),\n",
-       " ('PUCK HUNT', ['DUCK HUNT']),\n",
-       " ('EEE  BOWSER JR', ['BOWSER JR.']),\n",
-       " ('4 LIFTLE MAC', ['LITTLE MAC']),\n",
-       " ('IE SHEIK', ['SHEIK']),\n",
-       " ('CAPTATN FALCON', ['CAPTAIN FALCON']),\n",
-       " ('LUCARIO', ['LUCARIO']),\n",
-       " ('CORRIN', ['CORRIN']),\n",
-       " ('SHULK', ['SHULK']),\n",
-       " ('TOON LINK', ['TOON LINK']),\n",
-       " ('FALCO', ['FALCO']),\n",
-       " ('PICHU', ['PICHU']),\n",
-       " ('AA  LUIGI', ['LUIGI']),\n",
-       " ('CLOUD', ['CLOUD']),\n",
-       " ('VILLAGER', ['VILLAGER']),\n",
-       " ('IKE', ['IKE']),\n",
-       " ('NSS ZELDA', ['ZELDA']),\n",
-       " ('AE PALUTENA', ['PALUTENA']),\n",
-       " ('NH INCINEROAR', ['INCINEROAR']),\n",
-       " ('ES LUCAS', ['LUCAS']),\n",
-       " ('B ARER  VILLAGER', ['VILLAGER']),\n",
-       " ('AD  PIPOY KONG', ['DIDDY KONG']),\n",
-       " ('A  LUIGI', ['LUIGI']),\n",
-       " ('EA PIKACHU', ['PIKACHU']),\n",
-       " ('DARK SAMUS', ['DARK SAMUS']),\n",
-       " ('OM PIKACHU', ['PIKACHU']),\n",
-       " ('BAYONETTA', ['BAYONETTA']),\n",
-       " ('MARTH', ['MARTH']),\n",
-       " ('KIRBY', ['KIRBY']),\n",
-       " ('DUCK HURT', ['DUCK HUNT']),\n",
-       " ('CHROM', ['CHROM']),\n",
-       " ('SNAKE', ['SNAKE']),\n",
-       " ('A JIGGLYPUFF', ['JIGGLYPUFF']),\n",
-       " ('ZERO SUIT SAMUS', ['ZERO SUIT SAMUS']),\n",
-       " ('RY', ['RYU']),\n",
-       " ('FT  GANONDORF', ['GANONDORF']),\n",
-       " ('SHEIK', ['SHEIK']),\n",
-       " ('ACCA MAN MEGA MAN', ['MEGA MAN']),\n",
-       " ('WARIO', ['WARIO']),\n",
-       " ('FOX', ['FOX']),\n",
-       " ('KEN', ['KEN']),\n",
-       " ('SAMUS', ['SAMUS']),\n",
-       " ('SS  PUCK HUNT', ['DUCK HUNT']),\n",
-       " ('TEABELLE ISABELLE', ['ISABELLE']),\n",
-       " ('DAISY', ['DAISY'])]"
-      ]
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "atf = list(map(lambda s: s.replace('\\n',' ').upper(), atf))\n",
     "atf = list(map(printable, atf))\n",
@@ -293,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -303,60 +256,61 @@
        " 'OLIMAR',\n",
        " 'RIDLEY',\n",
        " 'MARIO',\n",
+       " 'IE VEKENOAK',\n",
        " 'BOWSER',\n",
-       " 'B PIKACHU',\n",
-       " '4 IVTLE MAC',\n",
-       " 'EEN USER IR',\n",
-       " 'AYA A ZELDA',\n",
-       " 'ONUTENA  ALUTENA',\n",
+       " 'CHROM',\n",
+       " 'NN ZELDA',\n",
+       " 'YOUNG LINK',\n",
+       " 'BAYONETTA',\n",
        " 'RYU',\n",
-       " 'IE  GUONDOET',\n",
-       " 'SAMUS',\n",
+       " 'A  LUIGI',\n",
        " 'LINK',\n",
-       " 'A  LUIG',\n",
-       " 'ISABELLE',\n",
-       " 'E  DYCK HURT',\n",
-       " 'PUCK HURT',\n",
+       " 'OO PALUTENA',\n",
+       " 'EA  PUCK HURT',\n",
+       " 'AE PEACH',\n",
+       " 'A PUCK HUST',\n",
+       " 'VOA PIKACHU',\n",
+       " 'LUCAS',\n",
+       " 'CORRIN',\n",
        " 'SHULK',\n",
-       " 'LUCARIO',\n",
+       " 'TOON LINK',\n",
        " 'WARIO',\n",
-       " '700 LINK',\n",
        " 'FALCO',\n",
+       " 'EE JIGGLYPUFF',\n",
        " 'PICHU',\n",
-       " 'BA',\n",
+       " 'PLOOY KONG',\n",
+       " 'OAXS PUCK HURT',\n",
+       " 'CLOUD',\n",
        " 'VILLAGER',\n",
        " 'IKE',\n",
-       " 'R  CHROM',\n",
-       " 'BAYONET',\n",
        " 'ZELDA',\n",
-       " 'CLOUD',\n",
-       " 'LUCAS',\n",
-       " 'EE  PIDDY KONG',\n",
-       " 'CORRIN',\n",
-       " 'MARTH',\n",
-       " 'AE   ATAH TNCINEROAR',\n",
-       " 'HES AR CN',\n",
-       " 'KIRBY',\n",
-       " 'YOUNGLIM',\n",
-       " 'SNAKE',\n",
-       " 'LES CHROM',\n",
-       " 'A JIGGLIPUFF',\n",
-       " 'SHEIK',\n",
-       " 'PUCK HURT',\n",
-       " 'AE PIKACHU',\n",
        " 'FOX',\n",
+       " 'S EER  VILLAGER',\n",
+       " 'FO XX',\n",
+       " 'WH WYCINEROAR',\n",
+       " 'MARTH',\n",
+       " 'AF LITTLE HAC',\n",
+       " 'GOUSTH IR',\n",
+       " 'KIRBY',\n",
+       " 'OUNG LINK',\n",
+       " 'SNAKE',\n",
+       " 'A OU  PALUTENA',\n",
+       " 'E  PUCK HUNT',\n",
+       " 'FY ON CHROM',\n",
+       " 'AE',\n",
+       " 'GANONDORF',\n",
+       " 'SHEIK',\n",
+       " 'ORL ISABELLE',\n",
+       " 'SHEIK',\n",
        " 'KEN',\n",
-       " 'ARENA',\n",
-       " 'BAYONETTA',\n",
        " 'SAMUS',\n",
+       " 'ED PIKACHU',\n",
        " 'EGA MAN',\n",
-       " 'PHEK SANS',\n",
-       " 'BAYONETTA',\n",
-       " 'OVAT LINK',\n",
+       " 'LUIGI',\n",
        " 'DAISY']"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
