Updated params a long time ago

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,32 +24,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "VIDEO_DEVICE='/dev/video0'\n",
     "CONTROLLER='/dev/ttyUSB0'\n",
-    "OUTPUT_PATH='./images/'"
+    "OUTPUT_PATH='./images_real/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "match_params = {\n",
-    "    'style': 'stock',\n",
-    "    'stock': 3,\n",
-    "    'time limit': None,\n",
+    "    'style': 'time',\n",
+    "    'stock': None,\n",
+    "    'time limit': 5,\n",
     "    'fs meter': False,\n",
     "    'spirits': False,\n",
     "    'cpu level': 9,\n",
-    "    'stage selection': 'omega only',\n",
+    "    'stage selection': 'omega + battlefield',\n",
     "    'items': None\n",
     "}\n",
-    "time_limit = 3 # minutes\n",
+    "time_limit = 5 # minutes\n",
     "\n",
     "# ACTUIALLY NO!!!\n",
     "# IT IS \"3:00\"\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
