--- a/anal.ipynb
+++ b/anal.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,14 +161,33 @@
     "def extract_roi(image,x,y,dx,dy, m=(10,10)):\n",
     "    # m is (y,x)\n",
     "    roi = image[y+m[0]:y+dy-m[0],x+m[1]:x+dx-m[1]]\n",
-    "    return roi\n"
+    "    return roi\n",
+    "\n",
+    "def process_text(s):\n",
+    "    s = s.replace('\\n',' ').upper()\n",
+    "    s = printable(s)\n",
+    "    candidates = difflib.get_close_matches(s, lof, n=1, cutoff=0.6)\n",
+    "    return candidates[0] if len(candidates)>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-105-eb12bdd39434>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mroi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mtff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mocr_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mfighter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0matf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfighter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-104-45629f8c1b3c>\u001b[0m in \u001b[0;36mprocess_text\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprintable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mcandidates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdifflib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_close_matches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcutoff\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mcandidates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "atf = set()\n",
     "bail_after = 69\n",
@@ -182,75 +201,16 @@
     "    roi = extract_roi(image,x,y,dx,dy,(10,10))\n",
     "    roi = process_image(roi)\n",
     "    tff = ocr_image(roi)\n",
-    "\n",
-    "    atf.add(tff)"
+    "    fighter = process_text(tff)\n",
+    "    if fighter:\n",
+    "        atf.add(fighter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('OUNG LINK', ['YOUNG LINK']),\n",
-       " ('CHROM', ['CHROM']),\n",
-       " ('ER SUIT MUS', ['ZERO SUIT SAMUS']),\n",
-       " ('LUCINA', ['LUCINA']),\n",
-       " ('IKE', ['IKE']),\n",
-       " ('SANONDORF', ['GANONDORF']),\n",
-       " ('EEE YUCK HUNT', ['DUCK HUNT']),\n",
-       " ('EE PIKACHU', ['PIKACHU']),\n",
-       " ('FON LINK', ['TOON LINK']),\n",
-       " ('ROB', ['ROB']),\n",
-       " ('SHEIK', ['SHEIK']),\n",
-       " ('FOX', ['FOX']),\n",
-       " ('IUI FIT A INER', ['WII FIT TRAINER']),\n",
-       " ('LINK', ['LINK']),\n",
-       " ('EE YUCK HUNT', ['DUCK HUNT']),\n",
-       " ('ZELDA', ['ZELDA']),\n",
-       " ('RYU', ['RYU']),\n",
-       " ('MEWTWO', ['MEWTWO']),\n",
-       " ('EACH', ['PEACH']),\n",
-       " ('CLOUD', ['CLOUD']),\n",
-       " ('DAISY', ['DAISY']),\n",
-       " ('YARK SAMUS', ['DARK SAMUS']),\n",
-       " ('LUCAS', ['LUCAS']),\n",
-       " ('CE CLIMBERS', ['ICE CLIMBERS']),\n",
-       " ('SRENINJA', ['GRENINJA']),\n",
-       " ('CORRIN', ['CORRIN']),\n",
-       " ('FALCO', ['FALCO']),\n",
-       " ('OO SANONDORF', ['GANONDORF']),\n",
-       " ('APTATNL ALCON', ['CAPTAIN FALCON']),\n",
-       " ('MEGA MAN', ['MEGA MAN']),\n",
-       " ('OSALINA LUMA', ['ROSALINA & LUMA']),\n",
-       " ('LUIGI', ['LUIGI']),\n",
-       " ('SIMON', ['SIMON']),\n",
-       " ('LUDWIG', ['LUDVIG']),\n",
-       " ('ROBIN', ['ROBIN']),\n",
-       " ('PACMAN', ['PAC-MAN']),\n",
-       " ('LINK', ['LINK']),\n",
-       " ('EE IGGLYPUFF', ['JIGGLYPUFF']),\n",
-       " ('YO RANHA  ANT', ['PIRANHA PLANT']),\n",
-       " ('LUIGI', ['LUIGI']),\n",
-       " ('DR MARIO', ['DR. MARIO']),\n",
-       " ('OKEMON EA INER', ['POKEMON TRAINER']),\n",
-       " ('SRENINJA', ['GRENINJA']),\n",
-       " ('YUCK HUNT', ['DUCK HUNT']),\n",
-       " ('YETA KNIGHT', ['META KNIGHT']),\n",
-       " ('ING K 2O0B', ['KING K. ROOL']),\n",
-       " ('YOSHI', ['YOSHI']),\n",
-       " ('RIDLEY', ['RIDLEY']),\n",
-       " ('SHULK', ['SHULK']),\n",
-       " ('DARK PIT', ['DARK PIT'])]"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NORMAL\n",
     "atf = list(map(lambda s: s.replace('\\n',' ').upper(), atf))\n",
