--- a/anal.ipynb
+++ b/anal.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,29 +167,16 @@
     "    s = s.replace('\\n',' ').upper()\n",
     "    s = printable(s)\n",
     "    candidates = difflib.get_close_matches(s, lof, n=1, cutoff=0.6)\n",
-    "    return candidates[0] if len(candidates)>"
+    "    return candidates[0] if len(candidates)>0 else None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-105-eb12bdd39434>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mroi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mtff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mocr_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mfighter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0matf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfighter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-104-45629f8c1b3c>\u001b[0m in \u001b[0;36mprocess_text\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprintable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mcandidates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdifflib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_close_matches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcutoff\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mcandidates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "atf = set()\n",
+    "atf = list()\n",
     "bail_after = 69\n",
     "k = 0\n",
     "for ip in image_set:\n",
@@ -203,19 +190,223 @@
     "    tff = ocr_image(roi)\n",
     "    fighter = process_text(tff)\n",
     "    if fighter:\n",
-    "        atf.add(fighter)"
+    "        atf.append(fighter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NORMAL\n",
-    "atf = list(map(lambda s: s.replace('\\n',' ').upper(), atf))\n",
-    "atf = list(map(printable, atf))\n",
-    "list(map(lambda s: (s,difflib.get_close_matches(s, lof, n=1, cutoff=0.6)), atf))"
+    "#atf = list(map(lambda s: s.replace('\\n',' ').upper(), atf))\n",
+    "#atf = list(map(printable, atf))\n",
+    "#list(map(lambda s: (s,difflib.get_close_matches(s, lof, n=1, cutoff=0.6)), atf))\n",
+    "len(list(set(atf)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NESS',\n",
+       " 'LUCAS',\n",
+       " 'YOUNG LINK',\n",
+       " 'PIKACHU',\n",
+       " 'LITTLE MAC',\n",
+       " 'RYU',\n",
+       " 'INCINEROAR',\n",
+       " 'DR. MARIO',\n",
+       " 'DIDDY KONG',\n",
+       " 'WII FIT TRAINER',\n",
+       " 'PIKACHU',\n",
+       " 'GANONDORF',\n",
+       " 'MEGA MAN',\n",
+       " 'CAPTAIN FALCON',\n",
+       " 'NESS',\n",
+       " 'LUCAS',\n",
+       " 'GANONDORF',\n",
+       " 'WARIO',\n",
+       " 'LINK',\n",
+       " 'ISABELLE',\n",
+       " 'PIT',\n",
+       " 'DARK SAMUS',\n",
+       " 'DARK SAMUS',\n",
+       " 'DUCK HUNT',\n",
+       " 'LINK',\n",
+       " 'PAC-MAN',\n",
+       " 'LUCAS',\n",
+       " 'META KNIGHT',\n",
+       " 'ROSALINA & LUMA',\n",
+       " 'SNAKE',\n",
+       " 'CHROM',\n",
+       " 'RICHTER',\n",
+       " 'LUCARIO',\n",
+       " 'SIMON',\n",
+       " 'PIKACHU',\n",
+       " 'DIDDY KONG',\n",
+       " 'LINK',\n",
+       " 'SHEIK',\n",
+       " 'SNAKE',\n",
+       " 'LINK',\n",
+       " 'TOON LINK',\n",
+       " 'CLOUD',\n",
+       " 'LUCARIO',\n",
+       " 'PEACH',\n",
+       " 'YOSHI',\n",
+       " 'ZERO SUIT SAMUS',\n",
+       " 'LUCARIO',\n",
+       " 'MARIO',\n",
+       " 'DARK PIT',\n",
+       " 'BOWSER JR.',\n",
+       " 'PALUTENA',\n",
+       " 'SAMUS',\n",
+       " 'LUCINA',\n",
+       " 'FOX',\n",
+       " 'DONKEY KONG',\n",
+       " 'MEGA MAN',\n",
+       " 'ZELDA',\n",
+       " 'CORRIN',\n",
+       " 'YOUNG LINK',\n",
+       " 'CHROM',\n",
+       " 'KING K. ROOL',\n",
+       " 'JIGGLYPUFF',\n",
+       " 'ZELDA',\n",
+       " 'WARIO',\n",
+       " 'LUCAS',\n",
+       " 'ROY',\n",
+       " 'RYU',\n",
+       " 'DARK PIT',\n",
+       " 'VILLAGER',\n",
+       " 'JIGGLYPUFF']"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'label': '1 left place',\n",
+       "   'points': [[216, 2], [212, 110], [296, 110], [297, 0]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[87, 356], [85, 406], [289, 380], [288, 331]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[451, 0], [450, 127], [552, 124], [554, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[347, 355], [349, 402], [550, 379], [553, 329]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[197, 3], [199, 108], [294, 109], [294, 0]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[84, 356], [85, 404], [289, 376], [289, 329]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[476, 3], [477, 118], [567, 109], [564, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[348, 356], [350, 405], [552, 374], [550, 329]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[214, 1], [214, 119], [298, 117], [296, 0]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[87, 358], [87, 404], [287, 376], [288, 330]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[463, 1], [459, 120], [559, 120], [559, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[348, 357], [351, 405], [555, 375], [552, 329]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[198, 0], [196, 123], [293, 124], [295, 1]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[88, 355], [85, 405], [287, 377], [289, 329]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[476, 0], [472, 113], [572, 109], [568, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[349, 357], [350, 405], [552, 377], [552, 331]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[205, 0], [204, 114], [290, 114], [290, 0]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[86, 356], [88, 407], [287, 377], [288, 332]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[479, 0], [478, 118], [555, 113], [558, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[350, 356], [352, 404], [552, 374], [552, 330]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[214, 3], [214, 114], [296, 110], [294, 0]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[85, 356], [87, 404], [287, 377], [288, 332]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[460, 2], [459, 113], [559, 112], [558, 0], [458, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[348, 358], [351, 403], [552, 374], [552, 331]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[195, 0], [199, 112], [290, 114], [289, 0]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[465, 6], [465, 111], [563, 107], [564, 1]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[86, 356], [88, 405], [287, 377], [289, 333]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[350, 355], [351, 404], [552, 376], [551, 331]]}],\n",
+       " [{'label': '1 left place',\n",
+       "   'points': [[200, 1], [202, 122], [292, 119], [292, 0]]},\n",
+       "  {'label': '1 left name',\n",
+       "   'points': [[87, 357], [87, 405], [288, 378], [288, 331]]},\n",
+       "  {'label': '1 right place',\n",
+       "   'points': [[475, 0], [471, 111], [556, 106], [554, 0]]},\n",
+       "  {'label': '1 right name',\n",
+       "   'points': [[349, 354], [350, 403], [547, 380], [551, 331]]}]]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1ar"
    ]
   },
   {
